--- a/3A-10.tex
+++ b/3A-10.tex
@@ -955,7 +955,21 @@ La gráfica muestra cómo una función de costes puede mostrar economías de esc
 \end{axis}
 
 \preguntas
+
+\seccion{Test 2019}
+
+\textbf{6.} La función de costes de una empresa competitiva que produce el bien Y utilizando dos factores productivos $z_1$ y $z_2$ es: \textbf{$C(\omega_1, \omega_2, Y) = 2 \sqrt{\omega_1 \omega_2} Y$}, donde $\omega_1$ y $\omega_2$ son respectivamente los precios de los factores $z_1$ y $z_2$. Encuentre las funciones de demanda de factores $z_1$ y $z_2$, y señale la respuesta correcta:
+
+\begin{itemize}
+	\item[a] Si $Y=10$, $\omega_1 = 4$ y $\omega_2 = 16$, la demanda óptima de factor 1 es $z_1 = 2.5$.
+	\item[b] Si $Y=10$, y $\omega_1 = 2$ y $\omega_2 = 8$, la demanda óptima de factor 1 es $z_1 = 40$.
+	\item[c] Si $Y=100$, $\omega_1 = 10$ y $\omega_2 = 90$, la demanda óptima de factor 1 es $z_1 = 33.33$.
+	\item[d] Ninguna de las anteriores afirmaciones es correcta.
+\end{itemize}
+
+
 \seccion{Test 2017}
+
 \textbf{6.} Una empresa fabrica un único bien Y utilizando un conjunto de factores $\textbf{x} = (x_1, x_2, ..., x_n)$, de acuerdo con la función de producción $Y=f(\textbf{x})$. La empresa tiene el objetivo de maximizar el beneficio y adquiere los factores productivos en mercados competitivos con precios $\textbf{w} = (w_1, w_2, ..., w_n)$. Si $f$ es una función cóncava, entonces la función de costes de la empresa $C(\textbf{w}, Y)$ debe verificar la siguiente propiedad:
 
 \begin{itemize}
@@ -1082,6 +1096,8 @@ La gráfica muestra cómo una función de costes puede mostrar economías de esc
 \end{enumerate}
 
 \notas
+
+\textbf{2019}: \textbf{6.} D
 
 \textbf{2017}: \textbf{6.} A \textbf{7.} C
 
