--- a/3A-12.tex
+++ b/3A-12.tex
@@ -389,7 +389,7 @@ La exposición ha examinado la idea clave, la formulación, las implicaciones y 
 				\4 Realmente, dos problemas separados
 				\4[I] Problema de optimización de inversión
 				\4[] Maximizar valor presente de flujos netos
-				\4[] $\underset{k}{\max} \quad w-k + \frac{f(k)}{1+r} \quad \text{s.a:} k \leq w$
+				\4[] $\underset{\max}{k} \quad w-k + \frac{f(k)}{1+r} \quad \text{s.a:} k \leq w$
 				\4[] $\text{CPO:} \quad f'(k) = 1+r$
 				\4[] $\then$ Invertir dotación hasta que $f'(k) = 1+r$
 				\4[] $\then$ Invertir hasta eficiencia marginal de K sea interés
@@ -826,6 +826,18 @@ Gracias a esta propiedad de la solución óptima de este problema, podemos simpl
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{7.} Considere un individuo que vive dos períodos y en el primer periodo planifica su consumo $C_1$ y futuro $C_2$. El individuo valora la utilidad que le reporta el consumo en ambos periodos de acuerdo a la función de utilidad $u(C_1, C_2) = \ln C_1 + \delta \ln C_2$, donde $\delta \, \in \, (0,1)$ es la tasa de descuento. El individuo tiene unas dotaciones iniciales de consumo disponible en cada periodo $\omega_1, \omega_2$ y el tipo de interés en el mercado de capitales es $r$. Suponga que, en la decisión óptima, dado el tipo de interés inicial, el consumidor es un prestamista, es decir $C_1^* < \omega_1$. Señale la respuesta correcta:
+
+\begin{itemize}
+	\item[a] Si el tipo de interés sube, tras la subida del tipo de interés sigue siendo un prestamista.
+	\item[b] Si el tipo de interés sube, el consumidor pasará a ser un prestatario porque el efecto sustitución domina sobre el efecto renta.
+	\item[c] Tras la subida del tipo de interés, la decisión del consumidor entre ser prestamista o prestatario ($\hat{C_1} > \omega_1$) depende de la relación entre la tasa de descuento y el tipo de interés.
+	\item[d] Si el tipo de interés sube, el consumidor pasará a ser un prestatario porque el efecto renta domina sobre el efecto sustitución.
+\end{itemize}
+
+
 \seccion{Test 2017}
 \textbf{15.} La incoherencia dinámica de las políticas económicas surge cuando:
 
@@ -1026,6 +1038,8 @@ dada su restricción presupuestaria intertemporal. Si $u(c) = \ln c$ y sus dotac
 \end{enumerate}
 
 \notas
+
+\textbf{2019}: \textbf{7.} A
 
 \textbf{2017}: \textbf{15}. B
 
