--- a/3A-13.tex
+++ b/3A-13.tex
@@ -1061,6 +1061,17 @@ Los puntos rojos muestran los dos contratos elegidos. En el contrato A, los trab
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{8.} Considere un mercado de coches de segunda mano, en el que hay un vendedor con 1000 coches disponibles y un continuo de compradores potenciales. Los coches que se ofrecen en el mercado se diferencian en la calidad, representada por el parámetro $s \, \in \, [1,2]$. Todos los agentes son neutrales al riesgo. El vendedor tiene un excedente ``s'' si se queda con un coche de calidad ``s'', y un excedente ``p'' si lo vende al precio ``p'' mientras que cada comprador tiene un excedente ``1.2s -p'' si compra un coche de calidad ``s'' al precio ``p'', y ``0'' si no lo compra. El vendedor conoce la calidad de los coches pero no así los compradores, que saben que ``s'' se distribuye uniformemente en el intervalo $\left[1, 2 \right]$. El vendedor fija el mayor precio que están dispuestos a pagar los compradores por los coches con la información de la que disponen. Señale la respuesta correcta:
+
+\begin{itemize}
+	\item[a] En equilibrio no se vende ningún coche.
+	\item[b] En equilibrio se venden todos los coches al precio $p=2$.
+	\item[c] En equilibrio es $p=1.8$ y se venden todos los coches.
+	\item[d] En equilibrio el precio de los coches es $p=1.5$ y se venden la mitad de los coches.
+\end{itemize}
+
 \seccion{Test 2018}
 
 \textbf{7.} Un comercial (agente) puede realizar su trabajo haciendo un esfuerzo alto ($E_1=8$) o bajo ($E_2=4$), y el resultado económico que obtiene con su actividad, X, se valora en 10.000 euros o 5.000 euros, respectivamente. La función de utilidad del principal es $B(X,W) = X-W^2$, y la del agente es $U(W,E) = W - E$, siendo $W$ el pago que recibe el agente. La utilidad de reserva, $U^0$, viene dada por el subsidio de desempleo si el agente no trabaja que es 100 euros. Si suponemos que las probabilidades de fracaso, con relación al esfuerzo realizado, son $p_1 =0,4$ y $p_2 = 0,6$, el esquema de pagos óptimo si existe información simétrica y el principal puede incurrir en pérdidas es: 
@@ -1120,11 +1131,18 @@ Señale la respuesta CORRECTA:
 
 \notas
 
+\textbf{2019.} \textbf{8.} D
+
 \textbf{2018.} \textbf{7.} A
+
 \textbf{2015.} \textbf{8.} B
+
 \textbf{2011.} \textbf{4.} D
+
 \textbf{2005.} \textbf{6.} A
+
 \textbf{2004.} \textbf{8.} D
+
 
 \bibliografia
 
