--- a/3A-16.tex
+++ b/3A-16.tex
@@ -1422,6 +1422,7 @@ De ello se puede deducir que cuando todas las empresas tienen los mismos costes 
 
 \preguntas
 
+
 \seccion{28 de marzo de 2017}
 \begin{itemize}
     \item Ha expuesto los modelos de oligopolio en base a la existencia de dos empresas. ¿Qué sucede cuando compiten más de dos empresas?
@@ -1433,6 +1434,16 @@ De ello se puede deducir que cuando todas las empresas tienen los mismos costes 
     \item Diferencie entre juegos de horizonte finito e infinito en un contexto de cártel.
 \end{itemize}
 
+\seccion{Test 2019}
+
+\textbf{10.} Considere un mercado con 5 empresas que producen el mismo producto y que compiten repetida e indefinidamente eligiendo el precio al que venden el producto. La función inversa de demanda en $P(Q) = 1 -Q$, y los costes marginales de producción son iguales para todas las empresas e iguales a $c=0.2$. Cada empresa maximiza la suma descontada de la corriente de beneficios presentes y futuros, siendo $\delta$ la tasa de descuento común a todas las empresas. Señale la respuesta correcta:
+
+\begin{itemize}
+	\item[a] Si la tasa de descuento es $\delta = 0.5$ el cártel en el que las empresas fijan un precio de monopolio y se reparten equitativamente los beneficios de la industria es sostenible como Equilibrio de Nash Perfecto en Subjuegos (ENPS).
+	\item[b] El único equilibrio de Nash de la competencia en cada período implica que los beneficios de cada empresa son nulos, por lo que en el único ENPS del juego infinitamente repetido, la cooperación no es posible.
+	\item[c] Si la tasa de descuento es $\delta = 0.9$, el perfil de estrategias en que cada empresa inicia cooperando (precio de monopolio y reparto equitativo de beneficios) y en etapas sucesivas mantiene el mismo precio de monopolio si todas las empresas han cooperado en todos los periodos anteriores es un ENPS.
+	\item[d] Todas las anteriores afirmaciones son falsas.
+\end{itemize}
 
 \seccion{Test 2018}
 \textbf{9.} En un mercado de un bien homogéneo con elasticidad precio de la demanda constante $e=-2$, operan $n$ empresas iguales con unos costes $C(x_i) = 19x_i$, $(i=1,...,n)$. Si el precio de equilibrio del mercado es $p=20$ y las empresas se comportan como oligopolistas de Cournot, calcule el número de empresas en el mercado:
@@ -1738,6 +1749,8 @@ La cantidad que cada una de las empresas producen en el equilibrio de Cournot es
 \end{enumerate}
 
 \notas
+
+\textbf{2019:} \textbf{10.} C
 
 \textbf{2018:} \textbf{9.} A \textbf{12.} C
 
