--- a/3A-17.tex
+++ b/3A-17.tex
@@ -1059,11 +1059,24 @@ La relación entre rebajas $\alpha$ de precio y desplazamientos de consumidor in
 \preguntas
 
 
+
 \seccion{16 de marzo de 2017}
 \begin{itemize}
     \item ¿Para qué sirven estos modelos de competencia monopolística en la realidad?
     
     \item Pero imagine que trabaja en competencia, ¿como sabemos que una posición es dominante? ¿El fabricante de diamantes De Beers tiene esa posición?
+\end{itemize}
+
+
+\seccion{Test 2019}
+
+\textbf{11.} Considere un mercado con dos empresas 1,2 que ofrecen bienes diferenciados no divisibles y donde no es posible la entrada de nuevas empresas. Existe un continuo de potenciales consumidores que consumen cada uno como mucho una unidad de uno de los bienes. Los consumidores se pueden ordenar de acuerdo a sus gustos, se distribuyen uniformemente en el segmento $\left[ 0,1 \right]$ y si compran a la empresa $i$ otienen una utilidad $u_i = S - p_i - td^2$, donde $S$ es la valoración de los consumidores del bien, $p_i$ es el precio ofrecido por la empresa $i$, $d$ representa la distancia entre el punto más preferido para el consumidor y la localización en la que adquiere el producto, y $t > 0$ es una constante que representa los costes de transporte. Considere las siguientes situaciones: una en la que las empresas sólo eligen la localización de su producto (precios fijos), y otra en la que primero eligen localización, para después competir en precios. Señale la respuesta correcta:
+
+\begin{itemize}
+	\item[a] La competencia en precios no tiene ninguna consecuencia en la localización de las empresas.
+	\item[b] En equilibrio con competencia en localización y precios, la elección de la localización por parte de las empresas genera diferenciación óptima en el sentido que minimiza la distancia media entre los consumidores y la localización donde adquieren el producto.
+	\item[c] Cuando las empresas compiten en precios tras la localización, la capacidad de diferenciación de producto suaviza la competencia en precios y las empresas optan por la máxima diferenciación.
+	\item[d] En equilibrio con competencia en localización y precios, las empresas optan por situarse en el punto medio del segmento en el que se distribuyen uniformemente los consumidores.
 \end{itemize}
 
 \seccion{Test 2018}
@@ -1110,6 +1123,8 @@ Si el precio $P(A)=1$ y el precio de $P(B)=3$, ¿en qué tramo de la ciudad line
 \end{itemize}
 
 \notas
+
+\textbf{2019:} 11. C
 
 \textbf{2018:} \textbf{10.} D
 
