--- a/3A-18.tex
+++ b/3A-18.tex
@@ -1038,7 +1038,16 @@ El efecto renta indirecto es el efecto renta habitual del análisis de demanda: 
 
 \preguntas
 
+\seccion{Test 2019}
 
+\textbf{13.} Considere una economía de Robinson Crusoe, con un capital inicial fijo $K=100$ y función de producción del bien de consumo $Y=F(K,L) = \sqrt{KL}$, donde $L$ representa las horas diarias trabajadas por Robinson Crusoe. Robinson tiene 12 horas diarias disponibles para trabajar o dedicar al ocio, y por tanto $12 -L$ son las horas dedicadas al ocio por Robinson Crusoe. La función de utilidad de Robinson es $U(Y,L) = Y(12 -L)$. Señale la respuesta correcta:
+
+\begin{itemize}
+	\item[a] En el equilibrio competitivo, el cociente de salarios reales $\left( \frac{w}{p} \right)^* = 1$
+	\item[b] En el equilibrio competitivo, Robinson Crusoe trabaja $(L)^* = 6$
+	\item[c] En el equilibrio competitivo, Robinson Crusoe consume $(Y^*) = 20 \, \text{uds}$.
+	\item[d] En esta economía no podemos definir el equilibrio competitivo porque el único comprador es también el propietario de la empresa y no necesita adquirir el bien de consumo en el mercado.
+\end{itemize}
 
 
 \seccion{Test 2017}
@@ -1132,7 +1141,7 @@ Sea $Y_M = 9$, $\bar{K} = 9$, $\alpha = 1/2$. Señale la respuesta \textbf{verda
 
 \notas
 
-
+\textbf{2019}: \textbf{13.} C
 
 \textbf{2017}: \textbf{18.} C
 
