--- a/3A-2.tex
+++ b/3A-2.tex
@@ -1729,6 +1729,17 @@ De forma general, los conceptos de márgenes intensivo y extensivo hacen referen
 
 \preguntas
 
+\seccion{Test 2019}
+\textbf{1.} La tradición clásica deja sin respuesta algunas cuestiones económicas cuya importancia sería resaltada por escuelas de pensamiento posteriores. Indique entre las siguientes cuestiones, aquella que sí fue objeto de atención principal por parte de la Economía Clásica:
+
+\begin{itemize}
+	\item[a] El proceso de la formación de los precios en el mercado.
+	\item[b] La interacción entre la distribución de la renta y las variaciones en el producto real.
+	\item[c] El análisis completo de los costes y las condiciones de oferta.
+	\item[d] El problema de las fluctuaciones económicas.
+\end{itemize}
+
+
 \seccion{Test 2017}
 \textbf{2.} Indique cuál de las siguientes afirmaciones es \underline{\textbf{INCORRECTA}} en relación con la obra magna de J. S. Mill (1806-73), de \textit{Principios de Economía Política}:
 
@@ -1795,6 +1806,8 @@ De forma general, los conceptos de márgenes intensivo y extensivo hacen referen
 \end{itemize}
 
 \notas
+
+\textbf{2019:} \textbf{1.} B 
 
 \textbf{2017:} \textbf{2.} B
 
