--- a/3A-20.tex
+++ b/3A-20.tex
@@ -1218,6 +1218,19 @@ La exposición tiene por \textbf{objeto} responder a las preguntas más relevant
 
 \preguntas
 
+
+\seccion{Test 2019}
+
+\textbf{12.} Shapiro y Stiglitz (1984) presentan un modelo en el que la empresa no puede supervisar perfectamente a los trabajadores. Existe, por tanto, una parte de los trabajadores, \textit{trabajadores apáticos}, que realiza un menor esfuerzo laboral. El problema de la empresa es determinar el empleo y fijar un salario suficientemente alto como para estimular a los trabajadores a realizar su correspondiente esfuerzo laboral. Si suponemos que la probabilidad de quedar desempleado por motivos exógenos es 0, indique la afirmación correcta:
+
+\begin{itemize}
+	\item[a] El salario que permite disuadir de su menor esfuerzo laboral a los \textit{trabajadores apáticos} será menor cuanto mayor sea la probabilidad de que un trabajador apático sea identificado.
+	\item[b] El salario que permite disuadir de su menor esfuerzo laboral a los \textit{trabajadores apáticos} resulta ser independiente del nivel de empleo.
+	\item[c] La empresa determinará en el espacio (Empleo, Salario), una curva de Condición de Estímulo al Esfuerzo (CEE) estrictamente creciente.
+	\item[d] No existe un salario que permita disuadir de su menor esfuerzo laboral a los \textit{trabajadores apáticos}.
+\end{itemize}
+
+
 \seccion{Test 2011}
 \textbf{16.} Indique cuál de las siguientes afirmaciones es la correcta:
 
@@ -1227,6 +1240,7 @@ La exposición tiene por \textbf{objeto} responder a las preguntas más relevant
 	\item[c] La NAIRU representa la tasa de paro de equilibrio en un mercado de trabajo en competencia perfecta.
 	\item[d] Los modelos de salarios de eficiencia se caracterizan por establecer una relación positiva entre salarios y productividad.
 \end{itemize}
+
 
 \seccion{Test 2009}
 \textbf{17.} Considere un mercado de trabajo en el que una empresa a corto plazo con tecnología $Y=AN^\alpha$, se encuentra con un sindicato cuyo número de afiliados es $\bar{L}=125$. Si $A=12$, $\alpha = 2/3$ y el salario de reserva es $R=2$, entonces el salario de equilibrio competitivo $\omega_\text{ec}$ y el empleo de equilibrio competitivo son respectivamente:
@@ -1252,6 +1266,7 @@ La exposición tiene por \textbf{objeto} responder a las preguntas más relevant
 
 \notas
 
+\textbf{2019}: \textbf{12.} ANULADA
 \textbf{2011}: \textbf{16.} D
 \textbf{2009}: \textbf{17.} A
 \textbf{2008}: \textbf{22.} C
