--- a/3A-21.tex
+++ b/3A-21.tex
@@ -1052,7 +1052,25 @@ Los bienes gratuitos son aquellos cuyo precio es 0. Cuando se consideran bienes 
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{14.} Considere una economía de intercambio con dos bienes $x, y$; dos consumidores A, B que tienen preferencias del tipo Cobb-Douglas representadas por funciones de utilidad $u_A(x_A, y_A) = x_A y_A$; $u_B(x_B, y_B) = x_B y_B$. Hay 10 unidades del bien $x$ así como 20 unidades de bien $y$. Considere las siguientes asignaciones.
+
+\begin{itemize}
+	\item[i] $(x_A, y_A) = (10,20); \, (x_B, y_B) = (0,0)$
+	\item[ii] $(x_A, y_A) = (10,0); \, (x_B, y_B) = (0,20)$
+	\item[iii] $(x_A, y_A) = (4,8); \, (x_B, y_B) = (6,12)$
+\end{itemize}
+
+\begin{itemize}
+	\item[a] Todas ellas son asignaciones óptimas en el sentido de Pareto.
+	\item[b] Sólo la I. y la II. son asignaciones óptimas en el sentido de Pareto.
+	\item[c] Sólo la I. y la III. son asignaciones óptimas en el sentido de Pareto.
+	\item[d] Sólo la II. y la III. son asignaciones óptimas en el sentido de Pareto.
+\end{itemize}
+
 \seccion{Test 2018}
+
 \textbf{11.} En una economía de intercambio puro entre dos agentes A y B con dos bienes $x$ e $y$, tenemos las siguientes dotaciones iniciales: $x_A = 90$, $y_A = 30$; $x_B = 10$, $y_B = 70$. Los dos agentes (consumidores) tienen la misma función de utilidad $U=xy$. Si los consumidores tratan de llegar al equilibrio, la cantidad del bien $y$ consumida por el agente $B$ en el equilibrio es:
 
 \begin{itemize}
@@ -1061,7 +1079,6 @@ Los bienes gratuitos son aquellos cuyo precio es 0. Cuando se consideran bienes 
 	\item[c] $y=40$
 	\item[d] $y=30$
 \end{itemize}
-
 
 \seccion{Test 2017}
 
@@ -1082,7 +1099,7 @@ Si los mercados de todos los bienes salvo 1 y 2 se hallan en equilibrio, es deci
 
 \seccion{Test 2014}
 
-\textbf{13.} Para un consumidor individual, una solución de esquina puede ser óptima a pesar de que la RMST y la RMT no sean iguales:
+\textbf{13.} Para un consumidor individual, una solución de esquina puede ser óptima a pesar de que la RMS y la RMT no sean iguales:
 
 \begin{itemize}
 	\item[a] Pero esto no es posible en una caja de Edgeworth debido a la transitividad de las preferencias.
@@ -1093,6 +1110,7 @@ Si los mercados de todos los bienes salvo 1 y 2 se hallan en equilibrio, es deci
 
 \seccion{Test 2009}
 \textbf{10.} En una economía sin producción, considere que existen sólo dos bienes $x$, $y$ de los cuales hay cantidades fijas $X$ e $Y$, respectivamente, y dos individuos con dotaciones iniciales $\omega_1 = (x_1, y_1)$, y $\omega_2 = (x_2, y_2)$, de forma que $x_1 + x_2 = X$, $y_1 + y_2=Y$. Si las preferencias de los individuos 1 y 2 por los bienes vienen dadas respectivamente por las funciones de utilidad $U_1 = \ln x_1 + \ln y_1$ y $U_2 = \ln x_2 + \ln y_2$ entonces:
+
 \begin{itemize}
 	\item[a] No existe ninguna asignación Pareto eficiente en esta economía.
 	\item[b] Dado cualquier valor $\alpha$ tal que $0 \leq \alpha \leq X$, las cestas de consumo $(\alpha, (Y/X)\alpha)$ para 1 y $(X-\alpha, Y-(Y/X)\alpha)$ para 2 son Pareto eficientes.
@@ -1187,6 +1205,8 @@ A partir de la Ley de Walras podemos afirmar que:
 \end{itemize}
 
 \notas
+
+\textbf{2019}. \textbf{14.} C
 
 \textbf{2018}. \textbf{11.} C
 
