--- a/3A-23.tex
+++ b/3A-23.tex
@@ -1218,6 +1218,34 @@ Dados N bienes e I consumidores que reciben dotaciones $\vec{e^i}$ y cuyas prefe
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{15.} Considere un Gobierno que debe decidir la localización de tres bienes públicos $\left\lbrace 
+x, y, z \right\rbrace$ en dos regiones $\left\lbrace 1,2 \right\rbrace$. El siguiente cuadro representa el bienestar que generaría en cada una de las regiones la asignación de las diferentes combinaciones de bienes públicos en la región. Encuentre la asignación eficiente de bienes públicos entre las regiones y las transferencias que realizarían las regiones al Gobierno Central si éste utilizara el mecanismo de Vickrey-Clarke-Groves (VCG) para obtener la información de las regiones sobre la valoración de las diferentes combinaciones.
+
+\begin{center}
+\begin{tabular}{c c c}
+	\\ \hline
+	Combinaciones & $v_1(\cdot)$ & $v_2(\cdot)$ \\ \hline
+	$\left\lbrace \emptyset \right\rbrace$ & 0 & 0 \\
+	$\left\lbrace x \right\rbrace$ & 5 & 12 \\
+	$\left\lbrace y \right\rbrace$ & 4 & 9 \\
+	$\left\lbrace z \right\rbrace$ & 7 & 2 \\
+	$\left\lbrace x,y \right\rbrace$ & 20 & 15 \\
+	$\left\lbrace x,z \right\rbrace$ & 16 & 20 \\
+	$\left\lbrace y,z \right\rbrace$ & 12 & 13 \\
+	$\left\lbrace x,y, z \right\rbrace$ & 23 & 24 \\
+\end{tabular}
+
+\end{center}
+
+\begin{itemize}
+	\item[a] El mecanismo VCG asigna $\left\lbrace x, z \right\rbrace$ a la región 1, $\left\lbrace y \right\rbrace$ a la región 2, y las transferencias que tendrían que realizar las regiones serían respectivamente, $m_1 = 15$, $m_2 = 7$.
+	\item[b] El mecanismo VCG asigna $\left\lbrace x, y \right\rbrace$ a la región 1, $\left\lbrace z \right\rbrace$ a la región 2, y las transferencias que tendrían que realizar las regiones serían respectivamente, $m_1 = 12$, $m_2 = 9$.
+	\item[c] El mecanismo VCG asigna $\left\lbrace \emptyset \right\rbrace$ a la región 1, $\left\lbrace x, y, z \right\rbrace$ a la región 2, y las transferencias que tendrían que realizar las regiones serían respectivamente, $m_1 = 0$, $m_2 = 23$.
+	\item[d] El mecanismo VCG asigna $\left\lbrace x, z \right\rbrace$ a la región 1, $\left\lbrace y \right\rbrace$ a la región 2, y las transferencias que tendrían que realizar las regiones serían respectivamente, $m_1 = 14$, $m_2 = 4$.
+\end{itemize}
+
 \seccion{Test 2017}
 
 \textbf{12.} ¿Por qué puede un impuesto \textit{pigouviano} lograr que una empresa que fabrica cemento reduzca las externalidades negativas que causa con sus emisiones contaminantes a la atmósfera?
@@ -1301,6 +1329,8 @@ Dados N bienes e I consumidores que reciben dotaciones $\vec{e^i}$ y cuyas prefe
 \end{itemize}
 
 \notas
+
+\textbf{2019:} \textbf{15.} A
 
 \textbf{2017:} \textbf{12.} A
 
