--- a/3A-24.tex
+++ b/3A-24.tex
@@ -1318,6 +1318,24 @@ En Bergson (1937) se introduce el concepto de ``\textit{social welfare function}
     \item ¿Qué aplicación práctica tiene el tema? En concreto, en la Constitución Española.
 \end{itemize}
 
+\seccion{Test 2019}
+
+\textbf{16.} En el contexto del Teorema de Imposibilidad de Arrow, considere una sociedad en que los votantes tienen preferencias estrictas sobre las alternativas y considere las siguientes funciones de bienestar social:
+
+\begin{itemize}
+	\item[i] Unanimidad: la alternativa ``x'' es socialmente preferida a la alternativa ``y'' si todos los votantes prefieren la alternativa ``x'' a la alternativa ``y''. Si al menos un votante prefiere ``x'' a ``y'' y otro votante ``y'' a ``x'', ``x'' e ``y'' son consideradas socialmente indiferentes.
+	\item[ii] Mayoría: la alternativa ``x'' es preferida socialmente a la alternativa ``y'' si (y sólo si) el número de votantes que prefieren la alternativa ``x'' a la alternativa ``y'' supera al número de votantes que prefieren la alternativa ``y'' a la alternativa ``x''
+\end{itemize}
+
+Señale la afirmación \textbf{\underline{incorrecta}}:
+
+\begin{itemize}
+	\item[a] De acuerdo con la regla de unanimidad todos los votantes son dictadores.
+	\item[b] La regla de unanimidad satisface el axioma de Independencia de alternativas irrelevantes.
+	\item[c] Si todos los votantes tienen las mismas preferencias sobre alternativas, la regla de mayoría generaría unas preferencias sociales sin ciclos.
+	\item[d] Las reglas de la mayoría y unanimidad coinciden cuando sólo hay dos votantes y dos alternativas.
+\end{itemize}
+
 \seccion{Test 2016}
 
 \textbf{13.} En la teoría de la elección colectiva:
@@ -1353,13 +1371,15 @@ En Bergson (1937) se introduce el concepto de ``\textit{social welfare function}
 
 \notas
 
-EN ESTE TEMA SE PUEDEN INCORPORAR COSAS DEL NOBEL PRIZE LECTURE DE ANGUS DEATON DE 2015
+Leer Nobel Prize Lecture de Angus Deaton para mejorar este tema.
+
+\textbf{2019.} \textbf{16:} A
 
 \textbf{2016.} \textbf{13:} B
 
 \textbf{2015.} \textbf{12:} C
 
-\textbf{2011.} \textbf{10:} D
+\textbf{2011.} \textbf{10:} D. Por la paradoja de Condorcet. La agregación de preferencias transitivas da lugar a intransitividades. Si primero se vota $a$ vs $b$, se elige $a$. Después, en $a$ vs $c$, elegimos $c$. Si primero se vota $a$ vs $c$, tenemos un resultado de $c$. A continuación, si se vota $c$ vs $b$, tenemos un resultado de $b$. Por último, si en la primera ronda se vota $b$ vs $c$ tenemos un resultado de $b$. En la segunda ronda tenemos $b$ vs $a$, y el resultado es $a$. De tal manera que las preferencias agregadas son intransitivas tal que $a \succ b \succ c \succ a$.
 
 \bibliografia
 
