--- a/3A-25.tex
+++ b/3A-25.tex
@@ -34,6 +34,7 @@ FALTA apartado sobre Yardstick competition
 			\3 Justificación de la intervención pública
 			\3 Instrumentos de actuación
 			\3 Regulación
+			\3 Liberalización
 		\2 Objeto
 			\3 ¿Qué es la regulación?
 			\3 ¿Por qué es necesaria la regulación?
@@ -124,8 +125,8 @@ FALTA apartado sobre Yardstick competition
 			\3 Cambio tecnológico
 			\3 Unión Europea
 			\3 España
-\end{esquema}
 
+\end{esquema}
 
 \esquemalargo
 
@@ -219,7 +220,7 @@ FALTA apartado sobre Yardstick competition
 				\4[] Excluir a determinados agentes del consumo
 				\4[] $\to$ No es posible
 				\4 Bienes no rivales
-				\4[] Consumo por un agente 
+				\4[] Consumo por un agente
 				\4[] $\to$ No reduce oferta disponible para otro
 				\4 Realmente pueden subsumirse en externalidades
 				\4[] Bienes públicos como externalidades positivas
@@ -254,7 +255,7 @@ FALTA apartado sobre Yardstick competition
 				\4 Regulación de externalidades
 				\4[] $\to$ Internalización de coste público
 			\3 Formulación
-				\4 Precios no reflejan coste social 
+				\4 Precios no reflejan coste social
 				\4[] $\to$ No reflejan costes externos de consumo/producción
 				\4 Decisiones de agentes individuales
 				\4[] $\to$ Consistentes con precios
@@ -323,14 +324,14 @@ FALTA apartado sobre Yardstick competition
 				\4[] $\to$ Diversificación de riesgos
 				\4[] $\then$ Mercados financieros organizados y regulados
 				\4 Información asimétrica
-				\4[] Participación forzosa en seguros 
+				\4[] Participación forzosa en seguros
 				\4[] $\then$ Evitar SAdversa
 				\4[] Provisión pública de seguros y crédito
 				\4[] $\to$ Inexistencia de incentivos privados a proveer
 				\4[] $\then$ Sanidad pública universal
 				\4[] $\then$ Consorcio de seguros
 				\4[] $\then$ Crédito a emprendedores...
-				\4[] $\to$ Provisión de información 
+				\4[] $\to$ Provisión de información
 				\4[] $\then$ Empresas públicas de homologación
 				\4[] $\then$ Protección de patentes y marcas
 				\4[] $\then$ ...
@@ -440,7 +441,7 @@ FALTA apartado sobre Yardstick competition
 				\4[] $\to$ Tarifas para que consumidores se autoseleccionen
 				\4[] $\to$ Aumentar bienestar social
 				\4 Problemas
-				\4[] Requisitos de información 
+				\4[] Requisitos de información
 				\4[] $\to$ Insuperables en práctica
 				\4[] Estructuras de costes
 				\4[] $\to$ Incentivos a no revelar
@@ -519,7 +520,7 @@ FALTA apartado sobre Yardstick competition
 				\4[] Regulador fija $s$
 				\4[] $\to$ menor que $r_m$ en ausencia de regulación
 				\4[] $\to$ mayor que coste de capital $r$
-				\4[] Incentivos a invertir en exceso en K: 
+				\4[] Incentivos a invertir en exceso en K:
 				\4[] $\frac{d L}{d K} = \left| \text{RMST}_{lk} \right| = \frac{ \partial f(k) / \partial k}{\partial f(l) / \partial l} = \frac{r}{w} + \mu(r-s)$, $r < s$
 				\4[] $\then$ Empresa invierte en K más que en ausencia de regulación
 				\4[] Representación gráfica
@@ -884,7 +885,7 @@ FALTA apartado sobre Yardstick competition
 				\4[] $\to$ Friedman, Hayek
 				\4[] $\to$ Escuela de Chicago en 70s
 				\4 Objetivo
-				\4[] Mostrar condiciones bajo las cuales 
+				\4[] Mostrar condiciones bajo las cuales
 				\4[] $\to$ Monopolios naturales pueden alcanzar eq. óptimo
 				\4[] $\to$ Ec. de escala no necesariamente anticompetitivas
 				\4 Resultado
@@ -897,7 +898,7 @@ FALTA apartado sobre Yardstick competition
 				\4[] $\then$ Y obtener un beneficio positivo
 				\4[] Luego precio de equilibrio es tal que
 				\4[] $\to$ No hay incentivos a entrar en mercado
-				\4[] $\then$ Precio iguala coste medio 
+				\4[] $\then$ Precio iguala coste medio
 				\4[] $\then$ Una sola empresa produce
 				\4 Requisitos
 				\4[] Ausencia de barreras de entrada
@@ -958,7 +959,7 @@ FALTA apartado sobre Yardstick competition
 				\4[] $\then$ Red distribución eléctrica
 				\4[] $\then$ Plantas de generación
 				\4[] $\then$ Contratos a l/p con expectativas de más ingresos
-				\4[] Necesidad de compensar a empresas que operaban 
+				\4[] Necesidad de compensar a empresas que operaban
 				\4[] $\to$ Que realizaron inv. específicas/activos varados
 				\4[] $\then$ Enfrentan nuevo contexto jurídico
 		\2 Industrias de red
@@ -1140,7 +1141,7 @@ FALTA apartado sobre Yardstick competition
 				\4 Competencias regulatorias
 			\3 España
 				\4 Marco regulatorio
-				\4 CNMC 
+				\4 CNMC
 \end{esquemal}
 
 
