--- a/3A-26.tex
+++ b/3A-26.tex
@@ -903,7 +903,6 @@ Ver Muriel de la Riva (2016) sobre cambios metodológicos en SEC-2010 y para hac
 				\4 \textbf{Variación de activos}
 				\4[] Adquisición neta de activos financieros
 		\2 Otras cuentas
-			\3 Input-Output
 			\3 Cuentas satélite
 				\4 Objetivos:
 				\4[] Extender información de otras cuentas
@@ -1013,12 +1012,34 @@ Los impuestos sobre la producción y las importaciones (Tn/P+M) incluyen los imp
 Los \textit{precios básicos} son las cantidades que retienen los productores por cada unidad vendida de producto. No incluye los impuestos recibidos del comprador y reintegrados a la administración pública, pero sí que incluye las subvenciones recibidas por la administración pública para abaratar el coste de producción. Si al precio básico se le añaden los impuestos sobre los productos salvo el IVA y se descuentan las subvenciones a los productos, tenemos el \textit{precio de productor}. El \textit{precio de adquisición} es el resultado de sumar al precio de producción el IVA no deducible, los gastos de transporte y los márgenes comerciales de mayoristas y minoristas.
 
 \begin{align*}
-\text{P}_\text{ADQUISICION} = \text{P}_\text{PRODUCCIÓN} + \text{IVA} + \text{Transporte} + \text{Márgen comercial de minoristas/mayoristas} \\
+\text{P}_\text{ADQUISICION} = \text{P}_\text{PRODUCCIÓN} + \text{IVA} + \text{Transporte} + \text{Margen comercial de minoristas/mayoristas} \\
 \text{P}_\text{PRODUCCION} = \text{P}_\text{BASICO} + \text{Impuestos}_\text{Productos sin IVA} - \text{Subvención}_\text{Productos}
 \end{align*}
 
 
 \preguntas
+
+
+\seccion{Test 2019}
+
+\textbf{17.} Los cambios metodológicos introducidos por el SEC 2010 supusieron una modificación al alza de la estimación del PIB de 2010 próxima al 3,4\%. Entre los cambios principales, considere las siguientes opciones:
+
+\begin{itemize}
+	\item[i] Contabilización de la I+D como \textit{formación bruta de capital fijo}
+	\item[ii] Inclusión en la contabilidad nacional de actividades ilegales (prostitución, contrabando, tráfico de drogas, ...).
+	\item[iii] Consideración de todo el gasto en sistemas de armamento como \textit{consumo intermedio}, con independencia de su vida útil.
+	\item[iv] Mayor desagregación del sector institucional de \textit{Instituciones Financieras}.
+\end{itemize}
+
+Elija la respuesta correcta:
+
+\begin{itemize}
+	\item[a] Sólo las opciones i y ii son verdaderas.
+	\item[b] Todas las opciones son verdaderas.
+	\item[c] La opcion iv es falsa.
+	\item[d] Ninguna de las respuesta anteriores es correcta.
+\end{itemize}
+
 
 \seccion{Test 2017}
 \textbf{16.} Un país con un déficit exterior del 10\% del PIB y un superávit público del 1\% del PIB:
@@ -1031,6 +1052,8 @@ Los \textit{precios básicos} son las cantidades que retienen los productores po
 \end{itemize}
 
 \notas
+
+\textbf{2019}: \textbf{17.} D
 
 \textbf{2017}: \textbf{16.} C
 
