--- a/3A-28.tex
+++ b/3A-28.tex
@@ -1543,6 +1543,26 @@ Si un estímulo de política monetaria reduce el interés y aumenta la demanda a
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{18.} Según el modelo de Mundell-Fleming, la efectividad de las medidas de política económica varían en función del régimen cambiario y la libertad de movimiento de capitales:
+
+\begin{itemize}
+	\item[i] La política monetaria con tipo de cambio fijo gana eficacia a medida que aumenta la movilidad del capital.
+	\item[ii] La política monetaria con tipo de cambio flexible gana eficacia al aumentar la movilidad del capital.
+	\item[iii] La política fiscal con tipo de cambio fijo y perfecta movilidad de capitales es eficaz.
+	\item[iv] La política fiscal con tipo de cambio flexible es eficaz, cuando la movilidad de capital es alta o muy alta.
+\end{itemize}
+
+Elija la respuesta correcta:
+
+\begin{itemize}
+	\item[a] Únicamente la respuesta ii es verdadera.
+	\item[b] Las respuestas i y iii son falsas.
+	\item[c] Las respuestas ii y iii son verdaderas.
+	\item[d] La respuesta iv es verdadera.
+\end{itemize}
+
 \seccion{Test 2018}
 
 \textbf{13.} Suponga una economía abierta y pequeña, con movilidad perfecta de capitales y tipo de cambio flexible.
@@ -1697,6 +1717,8 @@ Si un estímulo de política monetaria reduce el interés y aumenta la demanda a
 \end{itemize}
 
 \notas
+
+\textbf{2019}: \textbf{18.} C
 
 \textbf{2018}: \textbf{13.} A
 
