--- a/3A-29.tex
+++ b/3A-29.tex
@@ -1002,6 +1002,27 @@ El punto A muestra el óptimo alcanzable en presencia de commitment. En ausencia
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{19.} En un contexto de expectativas racionales por parte de los agentes, considere las siguientes afirmaciones referidas al modelo de Lucas-Phelps de 1972:
+
+
+\begin{itemize}
+	\item[i] Los coeficientes estructurales estimados para un modelo econométrico se modifican cuando la regla de política económica cambia.
+	\item[ii] Una política monetaria no anticipada por agentes no tiene efectos reales si la varianza del shock de preferencias es nula.
+	\item[iii] Los efectos reales de las políticas económicas sorpresivas pueden variar en función de la elasticidad de la oferta de trabajo.
+	\item[iv] No existe relación estadística entre inflación y desempleo.
+\end{itemize}
+
+Indique la respuesta correcta:
+
+\begin{itemize}
+	\item[a] Todas las afirmaciones son falsas.
+	\item[b] Todas las afirmaciones son verdaderas.
+	\item[c] Sólo la afirmación iv es falsa.
+	\item[d] Sólo la afirmación iv es verdadera.
+\end{itemize}
+
 \seccion{Test 2018}
 
 \textbf{14.} ¿Cuál de los siguientes \textbf{NO} es uno de los supuestos básicos de la Nueva Macroeconomía Clásica? 
@@ -1127,6 +1148,8 @@ El punto A muestra el óptimo alcanzable en presencia de commitment. En ausencia
 \end{itemize}
 
 \notas
+
+\textbf{2019}: \textbf{19.} C
 
 \textbf{2018}: \textbf{14.} A
 
