--- a/3A-3.tex
+++ b/3A-3.tex
@@ -1286,6 +1286,18 @@ Las leyes de Gossen son tres postulados relativos a la utilidad que los agentes 
 
 \preguntas
 
+
+\seccion{Test 2019}
+
+\textbf{2.} Indique cuál de las siguientes contribuciones teóricas de Irving Fisher (1867-1947) \underline{\textbf{no}} fue resultado de su obra:
+
+\begin{itemize}
+	\item[a] La distinción entre el tipo de interés nominal y el tipo de interés real.
+	\item[b] Su interpretación del tipo de interés, que fue precursora de la teoría monetaria del interés basada en la Preferencia por la liquidez.
+	\item[c] El concepto de ``tasa de rendimiento sobre el coste'', en tanto que posteriormente pasaría a denominarse ``tasa interna de rendimientos de una inversión''.
+	\item[d] El concepto de ``tasa de rendimientos sobre el coste'', en tanto que fue precursor del concepto de la eficiencia marginal del capital de Keynes.
+\end{itemize}
+
 \seccion{Test 2017}
 \textbf{1.} Indique cuál de las siguientes afirmaciones es \underline{\textbf{INCORRECTA}} en relación con la \textit{Teoría de la utilidad} de W. S. Jevons (1835-82):
 
@@ -1358,6 +1370,8 @@ Las leyes de Gossen son tres postulados relativos a la utilidad que los agentes 
 \end{itemize}
 
 \notas
+
+\textbf{2019:} \textbf{2.} B
 
 \textbf{2017:} \textbf{1.} C
 
