--- a/3A-30.tex
+++ b/3A-30.tex
@@ -1187,6 +1187,17 @@ La gráfica muestra como una desviación $x \%$ respecto del empleo de equilibri
     \item Ha hablado usted de situaciones de racionamiento de crédito. ¿Conoce usted la Teoría de la Cuerda?
 \end{itemize}
 
+\seccion{Test 2019}
+
+\textbf{20.} Para los autores de la Nueva Economía Keynesiana, ¿cuál de las siguientes situaciones no constituiría una rigidez real?
+
+\begin{itemize}
+	\item[a] Las empresas de una economía incurren en costes cuando desean modificar sus precios.
+	\item[b] La existencia de información asimétrica entre prestamistas y prestatarios.
+	\item[c] La disponibilidad por parte de las empresas de reservas de capacidad.
+	\item[d] La existencia de costes en las empresas para la contratación y formación de los trabajadores.
+\end{itemize}
+
 \seccion{Test 2015}
 \textbf{14.} Señale la respuesta \textbf{\underline{falsa}} con respecto a la críticas realizadas a la hipótesis de las expectativas racionales:
 \begin{itemize}
@@ -1231,6 +1242,8 @@ Siendo $\pi_t$ la inflación real, $\pi_t^e$ la inflación esperada y $u_t$ el p
 \end{itemize}
 
 \notas
+
+\textbf{2019} \textbf{20.} A 
 
 \textbf{2015} \textbf{14.} D \textbf{15.} C
 
