--- a/3A-31.tex
+++ b/3A-31.tex
@@ -2282,6 +2282,18 @@ En otros términos, captura el cambio en la senda temporal de la oferta de traba
 	\item ¿Qué teorías explican la histéresis?
 \end{itemize}
 
+\seccion{Test 2019}
+
+\textbf{21.} Considere una función de Oferta Agregada construida a partir de la curva de Phillips ampliada con expectativas, en la que sustituimos la tasa de inflación estructural ($\pi^*$) por la tasa de inflación esperada ($\pi^e$), siendo formadas las expectativas de manera racional sobre la base de toda la información disponible. En este modelo, y en ausencia de perturbaciones de oferta, indique cuál de las siguientes afirmaciones es correcta:
+
+\begin{itemize}
+	\item[a] A largo plazo la curva de Oferta Agregada será horizontal a nivel de $\pi = \pi^e$.
+	\item[b] Si la producción coincide con su tasa natural (producción de pleno empleo), la inflación efectiva ($\pi$) coincidirá con la inflación esperada ($\pi^e$).
+	\item[c] La curva de Oferta Agregada será creciente sólo cuando la inflación efectiva ($\pi$) coincida con la inflación esperada ($\pi^e$).
+	\item[d] Si el Gobierno está dispuesto a aceptar que la inflación no deje de crecer, puede forzar a la producción a mantenerse permanentemente por encima de su tasa natural (producción de pleno empleo).
+\end{itemize}
+
+
 \seccion{Test 2018}
 
 \textbf{15.} Suponga una economía donde las expectativas de productividad son correctas y la tasa de inflación esperada para el presente año es la tasa de inflación efectiva del año anterior ($\pi^e_t = \pi_{t-1})$). Si se estima econométricamente una curva de Phillips con datos anuales, obteniéndose la expresión $\pi_t - \pi_{t-1} = 2\% - 0,25u_t$, (donde $\pi$ hace referencia a la tasa de inflación y $u$ a la tasa de paro) ello implica que:
@@ -2372,6 +2384,8 @@ Indique cual de las siguientes afirmaciones es correcta:
 
 
 Ver \url{https://voxeu.org/article/phillips-curve-dead-or-alive} sobre Curva de Phillips ``muerta'' en la actualidad
+
+\textbf{2019}: \textbf{21.} B
 
 \textbf{2018}: \textbf{15.} C \textbf{16.} A
 
