--- a/3A-35.tex
+++ b/3A-35.tex
@@ -1313,6 +1313,17 @@ El punto A muestra el óptimo alcanzable en presencia de commitment. En ausencia
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{22.} Señale la respuesta correcta sobre las medidas no-convencionales de política monetaria aplicadas por los Bancos Centrales tras el inicio de la reciente crisis:
+
+\begin{itemize}
+	\item[a] Los principales Bancos Centrales (BCE, Banco de Japón y Reserva Federal) aplicaron de forma coordinada en 2009 programas de compras masivas de activos.
+	\item[b] En los programas de compras de activos, el BCE acudió a las subastas de los Tesoros Públicos nacionales, adquiriendo así bonos e instrumentos públicos de deuda en el mercado primario.
+	\item[c] Una de las medidas de política monetaria no convencionales del BCE durante estos últimos años ha sido la incorporación sistemática en su comunicación de orientaciones sobre el curso futuro de su política monetaria. Este instrumento, sin embargo, no ha contribuido a reducir las denominadas <<primas de plazo>> de los tipos de interés de medio y de largo plazo.
+	\item[d] La operación Twist aplicada por la Reserva Federal en 2011 tuvo como objetivo rebajar la rentabilidad de la deuda estadounidense a través de un canje de bonos a corto plazo por bonos a largo plazo.
+\end{itemize}
+
 \seccion{Test 2017}
 \textbf{19.} ¿Cuál de las siguientes afirmaciones es correcta?
 
@@ -1354,6 +1365,8 @@ El punto A muestra el óptimo alcanzable en presencia de commitment. En ausencia
 \end{itemize}
 
 \notas
+
+\textbf{2019:} \textbf{22.} D
 
 \textbf{2017:} \textbf{19.} C \textbf{20.} D
 
