--- a/3A-37.tex
+++ b/3A-37.tex
@@ -1459,6 +1459,17 @@ La figura muestra dos economías A y B que en las coyunturas $C_A$ y $C_B$ tiene
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{23.} Recientemente, los modelos neokeynesianos se han centrado en analizar los efectos de la política fiscal sobre el crecimiento. Señale la respuesta correcta:
+
+\begin{itemize}
+	\item[a] Una política fiscal expansiva en un país que forma parte de una Unión Monetaria tiene un efecto expansivo para la economía doméstica, aunque dependerá del grado acomodaticio de la política monetaria común.
+	\item[b] Según esta escuela, ante una coyuntura de tipos de interés cero (\textit{zero lower bound}), el multiplicador del gasto público sería muy reducido (cercano a 0), lo que explicaría la baja o nula efectividad de la política fiscal.
+	\item[c] Blanchard y Leigh (2013) encuentran que la consolidación fiscal llevada a cabo en varias economías avanzadas puede explicar tasas de crecimiento menores a las proyectadas ante unos multiplicadores fiscales durante el inicio de la crisis que alcanzaron valores superiores a 1.
+	\item[d] Todas las anteriores son correctas.
+\end{itemize}
+
 \seccion{Test 2017}
 \textbf{18.} Para que la política fiscal pueda suavizar las fluctuaciones económicas:
 
@@ -1573,6 +1584,8 @@ Dada la información disponible, y suponiendo que el anuncio del gobierno sea cr
 \end{itemize}
 
 \notas
+
+\textbf{2019} \textbf{23.} C
 
 \textbf{2017:} \textbf{18.} D
 
