--- a/3A-4.tex
+++ b/3A-4.tex
@@ -1567,6 +1567,17 @@ Cuando en un mercado dado existe un exceso de demanda o de oferta, es habitual a
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{3.} J. M. Keynes (1883-1946) desarrolló importantes contribuciones teóricas en el marco de la caracterización del funcionamiento del modelo macroeconómico, y en particular (indique la respuesta \underline{\textbf{incorrecta}}:
+
+\begin{itemize}
+	\item[a] No consideraba que los mecanismos automáticos de ajuste del sector privado constituyeran una salvaguarda frente al desempleo prolongado.
+	\item[b] Para él, la existencia de salarios y precios flexibles a la baja, aunque no era probable que se diese en la economía, no garantizaba el pleno empleo.
+	\item[c] Fue un firme defensor del patrón oro, priorizando en consecuencia la estabilidad de los tipos de cambio frente a la estabilidad de los precios.
+	\item[d] Según él, a causa de ciertas limitaciones, en concreto las formas especiales de la demanda especulativa de dinero y de la función de inversión, la política monetaria no era predeciblemente útil.
+\end{itemize}
+
 \seccion{Test 2018}
 
 \textbf{1.} Entre los autores más destacados de la Síntesis Neoclásica puede citarse a:
@@ -1703,6 +1714,8 @@ Cuando en un mercado dado existe un exceso de demanda o de oferta, es habitual a
 \end{itemize}
 
 \notas
+
+\textbf{2019:} \textbf{3.} C
 
 \textbf{2018:} \textbf{1.} D
 
