--- a/3A-42.tex
+++ b/3A-42.tex
@@ -1125,6 +1125,34 @@ Supongamos $Y=F(K,L) = K^\alpha \cdot L^{1-\alpha}$. Tenemos que $F_K=\alpha \cd
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{24.} Una de las cuestiones centrales en el modelo de Solow es entender la velocidad de transición hacia el equilibrio a largo plazo cuando no se está en el. Si la velocidad de transición es rápida, el objeto de análisis será el comportamiento de la economía en el estado estacionario. Por el contrario, si dicha velocidad es lenta, las experiencias de crecimiento de las economías vendrán dominadas por las dinámicas de convergencia al estado estacionario. A la luz de esta explicación, considere el modelo de Solow con función de producción: $Y = AK^{1/3} L^{2/3}$, donde $\frac{\dot{A}}{A} = 0$, $\frac{\dot{L}}{L} = 0.015$, la depreciación $\delta = 0.015$ y la tasa de ahorro $s=0.05$. Calcule una aproximación lineal de la velocidad de transición, en torno al estado estacionario. Señale la respuesta correcta:
+
+\begin{itemize}
+	\item[a] Cada año se cubre el 2\% de la diferencia entre el capital y per cápita actual y el capital per cápita de estado estacionario. Además, la velocidad de transición disminuye al acercarse la economía al estado estacionario.
+	\item[b] Cada año se cubre el $4\%$ de la diferencia entre el capital per cápita actual y el capital per cápita de estado estacionario. Además, la velocidad de transición de transición disminuye al acercarse la economía al estado estacionario.
+	\item[c] Cada año se cubre el $2\%$ de la diferencia entre el capital per cápita actual y el capital per cápita de estado estacionario. Además, la velocidad de transición aumenta al acercarse la economía al estado estacionario.
+	\item[d] Cada año se cubre el $4\%$ de la diferencia entre el capital per cápita actual y el capital per cápita de estado estacionario. Además, la velocidad de transición aumenta al acercarse la economía al estado estacionario.
+\end{itemize}
+
+\textbf{25.} Considere el modelo de Solow à la Mankiw, Romer y Weil (1992), con la inclusión de capital humano en la función de producción:
+
+\begin{itemize}
+	\item Función de producción: $Y(t) = \left( A(t) L(t) \right)^{1-\alpha-\beta} H(t)^\beta K(t)^\alpha$ donde $\alpha, \beta \, \in \, (0,1)$
+	\item Acumulación del capital: $\dot{K}(t) = s_K Y(t) - \delta_K K(t)$ donde $s_K, \delta_K \, \in (0,1)$
+	\item Acumulación del capital humano: $\dot{H}(t) = s_h Y(t) - \delta_h K(t)$ donde $s_h, \delta_h \, \in (0,1)$
+	\item Progreso tecnológico: $A(t) = e^{gt} A(0)$
+	\item Crecimiento de la población: $L(t) = e^{nt} L(0)$
+\end{itemize}
+
+\begin{itemize}
+	\item[a] $\log \left( y(t) \right) = \frac{\alpha}{1-\alpha-\beta} \log \left( \frac{s_k}{n+g+\delta_k} \right) + \frac{\beta}{1-\alpha - \beta} \log \left(  \frac{s_h}{n+g+\delta_h} \right) + u$
+	\item[b] $\log \left( y(t) \right) = \alpha \log \left( \frac{s_k}{n+g+\delta_k} \right) + \beta \log \left(  \frac{s_h}{n+g+\delta_h} \right) + u$
+	\item[c] $\log \left( y(t) \right) = \log \left( A(0) \right) + g \cdot t + \frac{\alpha}{1 - \alpha -\beta} \log \left( \frac{s_k}{n+g+\delta_k} \right) + \frac{\beta}{1-\alpha -\beta} \log \left( \frac{s_h}{n + g + \delta_h} \right) + u$
+	\item[d] $\log \left( y(t) \right) = \log \left( A(0) \right) + g \cdot t + \alpha \log \left( \frac{s_k}{n+g+\delta_k} \right) + \beta \log \left( \frac{s_h}{n+g+\delta_h} \right) + u$
+\end{itemize}
+
 \seccion{Test 2018}
 \textbf{21.} Sea el modelo de Solow. Suponga que la función de producción es $F(K_t, A_t N_t) = K_t^\alpha (A_t N_t)^{1-\alpha}$. Suponga que la economía se encuentra en el estado estacionario. Diga qué respuesta es \textbf{\underline{FALSA}}:
 
@@ -1323,6 +1351,8 @@ A lo largo de la senda de equilibrio estacionario se verificará que el tipo de 
 
 
 \notas
+
+\textbf{2019}: \textbf{24}. A \textbf{25}. C
 
 \textbf{2018}: \textbf{21}. B 
 
