--- a/3A-7.tex
+++ b/3A-7.tex
@@ -15,7 +15,7 @@ La Teoría de la Utilidad Esperada fue la primera aplicación del modelo de deci
 
 Casi inmediatamente después de la aparición del trabajo de Von Neumann y Morgenstern, el modelo de la Utilidad Esperada empezó a ser objeto de estudios empíricos que trataban de encontrar discordancias entre el comportamiento de agentes reales y lo predicho por el modelo. Las paradojas de Allais, Machina o Ellsberg abrieron un debate acerca de la capacidad predictiva del modelo, y lo apropiado de su uso en un número creciente de trabajos. El debate conectaba en gran medida con la controversia de los supuestos, a la que Milton Friedman realizaría su aportación en su trabajo \obra{Ensayos de Economía Positiva}. Como fruto de este debate y desde un campo hasta el momento tangencialmente conectado con la economía, la psicología, Kahneman y Tversky publican en 1979 el trabajo seminal del llamado \textit{behavioral economics} o economía conductista (trabajo por el que Kahneman recibió en 2002 el Premio Nobel. Tversky había fallecido para entonces). Esta rama de la teoría de la decisión enfoca sus esfuerzos en la explicación de comportamientos humanos que se desvían sistemáticamente de lo predicho por la teoría de la Utilidad Esperada. Aunque algunos de sus desarrollos han avanzado notablemente la comprensión de los procesos de decisión, el coste en términos de tratabilidad y fragmentación de los modelos ha resultado a menudo prohibitivo. En 2017, Richard Thaler recibe el premio Nobel de economía por su trabajo en el área del behavvioral economics. Sus contribuciones teóricas y empíricas (algunas de ellas conjuntamente con Kahneman y Tversky) exploran las regularidades del comportamiento de los agentes en las finanzas, y ponen de manifiesto la importancia del marco en el que se planteen las decisiones entre diferentes activos financieros.
 
-Si bien la Teoría de la Utilidad Esperada no es capaz en muchas ocasiones de predecir qué decisiones tomarán agentes reales concretos, sí constituye una referencia básica a la hora de determinar qué decisión \text{deberán} tomar. De esta forma, adquiere una dimensión normativa que sobrepasa la dimensión positiva inicial y asume contenido normativo. Así, parece razonable pensar que en la medida en que los agentes estén plenamente informados y estén dispuestos a asumir el coste de utilizar esa información para tomar decisiones racionales, se comportarán siguiendo en muchos casos los dictados de la Teoría de la Utilidad Esperada.
+Si bien la Teoría de la Utilidad Esperada no es capaz en muchas ocasiones de predecir qué decisiones tomarán agentes reales concretos, sí constituye una referencia básica a la hora de determinar qué decisión \text{deberán} tomar. De esta forma, adquiere una dimensión normativa que sobrepasa la dimensión positiva inicial. Así, parece razonable pensar que en la medida en que los agentes estén plenamente informados y estén dispuestos a asumir el coste de utilizar esa información para tomar decisiones racionales, se comportarán siguiendo en muchos casos los dictados de la Teoría de la Utilidad Esperada.
 
 \seccion{Preguntas clave}
 \begin{itemize}
@@ -719,6 +719,24 @@ Si bien la Teoría de la Utilidad Esperada no es capaz en muchas ocasiones de pr
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{4.} Considere dos individuos, A y B, aversos al riesgo cuyas funciones de utilidad de Bernoulli sobre pagos monetarios son respectivamente (donde \textit{x} representa cantidades monetarias):
+
+\begin{align*}
+	u_A(x) = \ln x \hspace{10em} u_B(x) = -1/x^2
+\end{align*}
+
+Suponga que ambos individuos tienen una renta inicial de 10.000 € y juegan una lotería con la que, con probabilidad 1/2 ganan 100 € adicionales y con probabilidad 1/2 pierden 100 €. Señale la afirmación correcta.
+
+\begin{itemize}
+	\item[a] El individuo B está dispuesto a pagar una mayor prima de seguro que el individuo A.
+	\item[b] La función de utilidad del individuo B no puede representar las preferencias de un individuo que maximiza su utilidad esperada.
+	\item[c] El individuo A está dispuesto a pagar una mayor prima de seguro que el individuo B.
+	\item[d] Como ambos individuos son aversos al riesgo, ambos querrán asegurarse completamente y estarán dispuestos a pagar idénticas primas de seguro.
+\end{itemize}
+
+
 \seccion{Test 2018}
 \textbf{4.} En un entorno de incertidumbre, si un individuo tiene unas preferencias por la riqueza cierta, $w$, representadas por la función de utilidad $U(w) = w^{1/2}$, es \textbf{FALSO} que: 
 
@@ -832,6 +850,8 @@ Si bien la Teoría de la Utilidad Esperada no es capaz en muchas ocasiones de pr
 
 \notas
 
+\textbf{2019}. \textbf{4.} A
+
 \textbf{2018}. \textbf{4.} B
 
 \textbf{2017}. \textbf{5.} B
@@ -841,6 +861,57 @@ Si bien la Teoría de la Utilidad Esperada no es capaz en muchas ocasiones de pr
 \textbf{2014}. \textbf{5.} C
 
 \textbf{2011}. \textbf{5.} D
+
+Esta pregunta no tiene ninguna respuesta correcta, aunque en la plantilla oficial se indica D como tal.
+
+Tenemos una lotería tal que con una probabilidad $p$ se obtiene un pago de $1$ y con una probabilidad $1-p$ se obtiene un pago de $0$. Por otro lado, tenemos una función de utilidad esperada sin especificar aversión o preferencia por el riesgo. El equivalente cierto (EC) de la lotería será: $\text{EC} = p \cdot 1 + (1-p) \cdot 0 = p$. Sea que la diferencia entre la utilidad de recibir un pago de 1 y la utilidad del equivalente cierto de la lotería es mayor que la diferencia entre la utilidad del equivalente cierto de la lotería y la utilidad del pago de 0, y quede formalmente expresada esta proposición en (i). Sea también que la probabilidad de obtener 0 sea mayor que la de obtener 1 y quede expresada formalmente esta proposición en (ii).
+
+\begin{itemize}
+\item[(i)] $u(1) - u(\text{EC}) > u(\text{EC}) - u(0) \then u(1) + u(0) > 2 u(\text{EC})$ $\iff$ \fbox{$\frac{u(1) + u(0)}{2} > u(\text{EC})$} $= u(p) $
+	\item[(ii)] $p < 0,5$ $\then$ $(1-p) > 0,5$
+\end{itemize}
+
+Si la respuesta D es la correcta, el cumplimiento de la proposición (i) implica el cumplimiento de (ii) para cualquier forma de $u(x)$. Y por tanto, si es posible encontrar una $u(x)$ tal que se cumple (i) sin cumplirse (ii), la respuesta D habrá de ser falsa. Y para que sea falsa, bastará con encontrar una función de utilidad de Bernoulli para la que se cumpla $\frac{u(1) + u(0)}{2} > u(\text{EC}) = u(p)$ para $p>0,5$. Gráficamente, el problema puede representarse como:
+
+\begin{center}
+\begin{axis*}
+	% u(1) = 1
+	\draw[dashed] (0,3.5) -- (4,3.5);
+	\node[left] at (0,3.5){$u(1)$};
+
+	% u(0) = 0
+	\node[left] at (0,0){$u(0)$};
+
+	% (u(1)+u(0))/2
+	\draw[-, color=red] (0,1.75) -- (4,1.75);
+	\node[left] at (0,1.75){$\frac{u(1)+u(0)}{2}$};
+
+	% 1 en eje de abscisas
+	\draw[-] (3.5,-0.1) -- (3.5,0.1);
+	\node[below] at (3.5,-0.1){1};
+
+	% 0.5 en eje de abscisas
+	\draw[-] (1.75,-0.1) -- (1.75,0.1);
+	\node[below] at (1.75,-0.1){$0,5$};
+	\draw[dashed] (1.75,0) -- (1.75,3.5);
+
+
+	% utilidad de bernoulli estrictamente cóncava -- averso al riesgo
+	\draw[-] (0,0) to [out=70, in=180](3.5,3.5);
+	\node[left] at (1.1,2.4){\tiny $u_{\text{averso}}(x)$};
+	
+	% utilidad de bernoulli estrictamente convexa -- amante del riesgo
+	\draw[-] (0,0) to [out=20, in=270](3.5,3.5);
+	\node[right] at (2.5,1){\tiny $u_{\text{amante}}(x)$};
+
+	% utilidad de bernoulli convexa y convexa -- neutral al riesgo
+	\draw[-] (0,0) -- (3.5,3.5);
+	\node[right] at (1.8,2.75){\tiny $u_{\text{neutral}}(x)$};
+
+\end{axis*}
+\end{center}
+
+En el gráfico se puede apreciar como para funciones de utilidad de Bernoulli estrictamente convexas (i.e. agente amante del riesgo), la proposición (i) no implica (ii) y por ello, no tiene porqué cumplirse que la probabilidad de obtener 0 sea mayor que la de obtener 1 (i.e. no necesariamente $p < 0,5$). Esto resulta del hecho de que la curva $u_\text{amante}(x)$ se encuentra por debajo de la recta horizontal con ordenada $\frac{u(1)+u(0)}{2}$ para un intervalo no vacío de $p>0,5$. Ello invalida la respuesta D como correcta. Se puede apreciar como la proposición (i) puede cumplirse para individuos aversos y amantes del riesgo, de tal manera que ni la respuesta A ni la B son correctas. Por último, para que la respuesta C fuera válida, la proposición (i) debería implicar que $p>0,5$. Sin embargo, se aprecia en el gráfico como es posible cumplir la proposición (i) para valores de $p<0,5$ tanto en funciones de utilidad de Bernoulli convexas como cóncavas. Por ello, la respuesta C tampoco es correcta.
 
 \textbf{2008}. \textbf{9.} C
 
