--- a/3A-8.tex
+++ b/3A-8.tex
@@ -918,6 +918,18 @@ Inicialmente, el consumidor demanda la cesta representada por el punto 1. Se pro
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{5.} La función de gasto de un consumidor competitivo interesado en consumir dos bienes $x_1$ y $x_2$ es: $e(P_1, P_2, u) = \frac{P_1 P_2}{P_1 + P_2}u$, donde $P_1$ y $P_2$ son respectivamente los precios de los bienes $x_1$ y $x_2$, y $u$ es el nivel de utilidad alcanzado por el consumidor. Señale la afirmación correcta:
+
+\begin{itemize}
+	\item[a] Si la renta del consumidor es $M = 100$, y $p_1 = 4$ y $p_2 = 6$, la demanda marshalliana del consumidor del bien 1 es $x_1^M = 30$.
+	\item[b] Si la renta del consumidor es $M = 50$ y $p_1 = 4$ y $p_2 = 6$, la demanda marshalliana del consumidor del bien 2 es $x_2^M = 3.33$.
+	\item[c] Si la renta del consumidor es $M = 80$, y $p_1 = 2$ y $p_2 = 6$, la demanda marshalliana del consumidor del bien 1 es $x_1^M = 15$.
+	\item[d] Ninguna de las afirmaciones anteriores es correcta.
+\end{itemize}
+
+
 \seccion{Test 2018}
 
 \textbf{5.} Si las preferencias de un consumidor vienen representadas por la función de utilidad Cobb-Douglas, $U(x_1, x_2) = x_1 x_2$, los precios son $p_1 = p_2 = 10$ y la renta es $m=100$. Si se establece un impuesto unitario sobre el consumo de $x_1$ de $2,5$ unidades monetarias, la pérdida de bienestar para el consumidor producida por el impuesto y medida a través de la variación equivalente es, en valor absoluto:
@@ -1015,7 +1027,8 @@ siendo $x_1$ y $h_1$ las demandas marshalliana y hicksiana, respectivamente, y s
 
 \notas
 
-\textbf{2018}: \textbf{5.} D
+
+\textbf{2019}: \textbf{5.} B
 
 \textbf{2015}: \textbf{4.} A
 
