--- a/3B-12.tex
+++ b/3B-12.tex
@@ -1253,6 +1253,16 @@
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{30.} La Posición de Inversión Internacional (PII) es un documento contable que refleja el valor y la composición de las tenencias de activos y pasivos financieros frente al exterior. Señale la opción correcta:
+
+\begin{itemize}
+	\item[a] La Posición de Inversión Internacional se nutre principalmente de las variaciones de la cuenta financiera. Por tanto, una cuenta financiera donde la variación neta de pasivos supere a la variación neta de los activos aumentaría en valor absoluto una Posición de Inversión Internacional neta acreedora.
+	\item[b] La Posición de Inversión Internacional puede verse afectada por los efectos valoración. \textit{Ceteris paribus}, un rendimiento positivo del IBEX35 provocaría una disminución en valor absoluto de la Posición de Inversión Internacional Neta deudora.
+	\item[c] España registra desde 2018 una Posición de Inversión Internacional Neta acreedora gracias a los continuos superávits registrados en la cuenta financiera durante los últimos años.
+	\item[d] La Posición de Inversión Internacional Neta es una estadística incluida en el Procedimiento de Desequilibrios Macroeconómicos de la Unión Europea. Se expresa como porcentaje del PIB nacional y se establece en el $-35\%$ PIB.
+\end{itemize}
 
 \seccion{Test 2018}
 
@@ -1298,6 +1308,8 @@
 \end{enumerate}
 
 \notas
+
+\textbf{2019}: \textbf{30}. D
 
 \textbf{2018}: \textbf{29}. B
 
