--- a/3B-13.tex
+++ b/3B-13.tex
@@ -1773,6 +1773,18 @@ the stock of money. >>
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{31.} De acuerdo al enfoque monetario de Balanza de Pagos (Johnson, 1972), ¿cuáles son los supuestos fundamentales en los que se basa el modelo para concluir que los desajustes en el mercado monetario son la causa fundamental de los desequilibrios de la Balanza de Pagos?
+
+\begin{itemize}
+	\item[a] Tipo de cambio fijo: perfecta movilidad de capitales, pero sustituibilidad imperfecta entre activos nacionales y extranjero; y pleno empleo de recursos, entre otros.
+	\item[b] Tipo de cambio flexible; movilidad imperfecta de capitales; y ley del precio único, y entre otros.
+	\item[c] Tipo de cambio fijo; perfecta movilidad de capitales y perfecta sustituibilidad entre activos nacionales e internacionales; y pleno empleo de recursos, entre otros.
+	\item[d] Tipo de cambio fijo, movilidad imperfecta de capitales y ley del precio único, entre otros.
+\end{itemize}
+
+
 \seccion{Test 2018}
 
 \textbf{30.} El concepto de ``efecto curva J'' señala que, en una economía con déficit comercial, la devaluación de la moneda nacional, ceteris paribus:
@@ -1863,6 +1875,8 @@ the stock of money. >>
 \end{itemize}
 
 \notas
+
+\textbf{2019}: \textbf{13.} C
 
 \textbf{2018}: \textbf{30.} B
 
