--- a/3B-15.tex
+++ b/3B-15.tex
@@ -1230,6 +1230,26 @@ Una moneda cotiza con prima (descuento) cuando en el mercado forward su precio e
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{32.} Suponga un especulador de divisas que espera que el tipo de cambio al contado del euro respecto del dólar dentro de 3 meses sea menor que el mejor tipo de cambio forward del euro respecto del dólar con entrega en 3 meses que puede obtener:
+
+\begin{itemize}
+	\item[a] El especulador vendería hoy dólares al tipo de cambio forward y compraría dólares dentro de 3 meses al tipo de cambio spot.
+	\item[b] El especulador compraría hoy dólares al tipo de cambio forward y vendería dólares dentro de 3 meses al tipo de cambio spot.
+	\item[c] El especulador compraría hoy euros al tipo de cambio forward y los vendería en el mercado al contado al cabo de 3 meses.
+	\item[d] Las opciones a y c son correctas.
+\end{itemize}
+
+\textbf{33.} En el modelo de determinación del tipo de cambio de Dornbusch (1976), la posibilidad de sobrerreación (overshooting) del tipo de cambio depende:
+
+\begin{itemize}
+	\item[a] La sensibilidad de las expectativas ante desviaciones del tipo de cambio nominal respecto a su valor de equilibrio.
+	\item[b] La sensibilidad de la demanda de dinero y de la demanda de inversión ante variaciones del tipo de interés.
+	\item[c] La sensibilidad de la demanda de exportaciones netas ante variaciones del tipo de cambio real.
+	\item[d] La sensibilidad de la demanda de dinero al tipo de interés y de la sensibilidad de las expectativas ante desviaciones del tipo de cambio nominal respecto a su valor de equilibrio.
+\end{itemize}
+
 \seccion{Test 2018}
 
 \textbf{31.} Suponga un tipo de cambio al contado de $0,85$ euros por dólar. Suponga que el tipo de interés anual del euro es del 1\% y el tipo de interés anual del dólar es del 0,8\%. Si se cumpliera la teoría de la paridad de los tipos de interés, en equilibrio y en ausencia de incertidumbre, el tipo de cambio forward a 1 año es:
@@ -1366,6 +1386,8 @@ Señale la respuesta verdadera relativa al tipo de cambio a largo plazo del fran
 \end{enumerate}
 
 \notas
+
+\textbf{2019}: \textbf{32.} D \textbf{33.} D
 
 \textbf{2018}: \textbf{31.} D
 
