--- a/3B-18.tex
+++ b/3B-18.tex
@@ -76,7 +76,7 @@ Releer \textit{currency crisis models} de Palgrave por Burnside, Eichenbaum y Re
 			\3 Shock exógeno con expectativas bajas de inflación
 			\3 Shock exógeno negativo con expectativas altas de inflación
 		\2 Implicaciones
-			\3 Devaluación asegurada
+			\3 Devaluación asegurada si déficit elevado
 			\3 Tipo fijo creíble
 			\3 Equilibrios múltiples
 		\2 Valoración
@@ -537,7 +537,7 @@ Releer \textit{currency crisis models} de Palgrave por Burnside, Eichenbaum y Re
 %				\4[] Con HER, conocen incentivos del gobierno
 %				\4[] $\to$ Estiman $\pi^e$ basándose en incentivos a devaluar
 		\2 Implicaciones
-			\3 Devaluación asegurada
+			\3 Devaluación asegurada si déficit elevado
 				\4 Déficit elevado a financiar
 				\4[] Mantiendo TCFijo, sólo consolidación fiscal para financiar
 				\4[] $\to$ Output cae fuertemente por consolidación
