--- a/3B-2.tex
+++ b/3B-2.tex
@@ -682,32 +682,22 @@ A lo largo de la exposición se ha analizado el problema de decisión de inversi
 \end{esquemal}
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 \graficas
 
 \conceptos
 
 \preguntas
+
+\seccion{Test 2019}
+
+\textbf{26.} La rentabilidad financiera o ROE (por sus siglas en inglés) está relacionada con la rentabilidad económica o ROA (por sus siglas en inglés), derivándose dicha relación del efecto del apalancamiento financiero sobre la rentabilidad. De esta forma (señale la opción correcta):
+
+\begin{itemize}
+	\item[a] El efecto del apalancamiento financiero sobre la rentabilidad puede ser positivo (ROE > ROA) o negativo (ROE < ROA) y no depende del coste de la deuda.
+	\item[b] El efecto del apalancamiento financiero sobre la rentabilidad puede ser positivo (ROE > ROA) o negativo (ROE < ROA) y depende del coste de la deuda.
+	\item[c] La rentabilidad financiera no se verá afectada por el sistema impositivo.
+	\item[d] Las opciones b y c son correctas.
+\end{itemize}
 
 
 \seccion{Test 2018}
@@ -754,6 +744,8 @@ A lo largo de la exposición se ha analizado el problema de decisión de inversi
 \end{enumerate}
 
 \notas
+
+\textbf{2019:} \textbf{26.} B
 
 \textbf{2018:} \textbf{23.} A
 
