--- a/3B-23.tex
+++ b/3B-23.tex
@@ -1016,6 +1016,17 @@ El impacto global de la existencia del FMI desde la Segunda Guerra Mundial hasta
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{34.} Señale la respuesta correcta en relación al Fondo Monetario Internacional:
+
+\begin{itemize}
+	\item[a] En la práctica se financia mediante las cuotas o préstamos que le conceden los Bancos Centrales de los Países miembros así como a través de la emisión de bonos en los mercados.
+	\item[b] El Directorio Ejecutivo está compuesto por 24 representantes de los 189 países miembros, de los cuales 8 tienen silla propia que no necesitan compartir con otros países.
+	\item[c] A 1 de octubre de 2016, el valor del DEG se basa en una cesta de 4 monedas principales: el dólar de EEUU., el euro, el yen japonés y la libra esterlina.
+	\item[d] Con la décimo quinta revisión de las cuotas del Fondo, en septiembre de 2019, España ha aumentado su porcentaje de votos hasta el $3,5\%$.
+\end{itemize}
+
 \seccion{Test 2018}
 
 \textbf{35.} En relación a la ejecución de la función supervisora del Fondo Monetario Internacional, señale la afirmación \underline{\textbf{CORRECTA}}:
@@ -1120,6 +1131,8 @@ El impacto global de la existencia del FMI desde la Segunda Guerra Mundial hasta
 \end{enumerate}
 
 \notas
+
+\textbf{2019}: \textbf{34}. B
 
 \textbf{2018}: \textbf{35}. D
 
