--- a/3B-25.tex
+++ b/3B-25.tex
@@ -981,6 +981,17 @@ El modelo CAPM es un modelo de \comillas{demanda}. El equilibrio aparece como re
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{35.} En el marco de un modelo CAPM, cuál de las siguientes afirmaciones es \textbf{\underline{incorrecta}}:
+
+\begin{itemize}
+	\item[a] El precio de los activos financieros sólo retribuye el riesgo no diversificable.
+	\item[b] Todos los agentes comparten las mismas distribuciones de probabilidad del rendimiento y riesgo de los activos financieros.
+	\item[c] La cartera de mercado óptima depende de la actitud frente al riesgo del inversor.
+	\item[d] El tipo de interés al que los agentes pueden prestar y tomar prestado es el mismo.
+\end{itemize}
+
 \seccion{Test 2018}
 
 \textbf{33.} Un individuo interesado en invertir en el sector de las telecomunicaciones utiliza como único criterio de selección de acciones para construir su cartera el PER (Price-earning ratio). En ese caso:
@@ -1142,6 +1153,8 @@ Señale la respuesta correcta sobre qué gestor ha obtenido los mejores resultad
 \end{itemize}
 
 \notas
+
+\textbf{2019}: \textbf{35}. C
 
 \textbf{2018}: \textbf{33}. B
  
