--- a/3B-26.tex
+++ b/3B-26.tex
@@ -859,6 +859,17 @@ Cuando el tipo de interés del bono (es decir, la tasa que determina el cupón) 
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{36.} Señale cuál de las siguientes afirmaciones es \textbf{\underline{incorrecta}}:
+
+\begin{itemize}
+	\item[a] La duración modificada indica la sensibilidad del precio de un instrumento de renta fija ante cambios en las tasas de interés del mercado.
+	\item[b] A igual vencimiento y tipos de interés, la duración modificada disminuye cuanto mayor sea el pago del cupón.
+	\item[c] En los bonos cupón cero, la duración coincide con el vencimiento.
+	\item[d] Manteniendo fijos el plazo de vencimiento y el tipo de interés del mercado, la convexidad está positivamente correlacionada con el tamaño del cupón.
+\end{itemize}
+
 \seccion{Test 2018}
 
 \textbf{34.} ¿Cuál de las siguientes afirmaciones sobre la duración de Macaulay es \textbf{\underline{INCORRECTA}}?
@@ -990,6 +1001,8 @@ Cuando el tipo de interés del bono (es decir, la tasa que determina el cupón) 
 \end{itemize}
 
 \notas
+
+\textbf{2019}: \textbf{36.} D
 
 \textbf{2018}: \textbf{34.} C
 
