--- a/3B-27.tex
+++ b/3B-27.tex
@@ -889,6 +889,18 @@ La optimalidad de la ejecución de opciones americanas es diferente para las \te
 
 \preguntas
 
+
+\seccion{Test 2019}
+
+\textbf{37.} Señale la afirmación correcta para las opciones europeas:
+
+\begin{itemize}
+	\item[a] Si los mercados de capitales son eficientes, el valor intrínseco de la prima de una opción de compra y de una opción de venta será idéntico si ambas opciones tienen el mismo subyacente, el mismo precio de ejercicio y el mismo vencimiento.
+	\item[b] Si los mercados de capitales son eficientes, el valor intrínseco de la opción de compra será superior al de la opción de venta para cualquier precio del subyacente si tienen el mismo vencimiento y precio de ejercicio.
+	\item[c] Si los mercados de capitales son eficientes, el valor temporal de la prima de la opción de compra será mayor cuanto mayor sea el precio de ejercicio.
+	\item[d] Si los mercados de capitales son eficientes, el valor temporal de la prima de la opción de venta será mayor cuanto mayor sea el precio de ejercicio.
+\end{itemize}
+
 \seccion{Test 2017}
 \textbf{35.} Si una opción \textit{call} está ``\textit{out the money}'' y su prima es positiva, entonces:
 
@@ -973,6 +985,8 @@ La optimalidad de la ejecución de opciones americanas es diferente para las \te
 \end{itemize}
 
 \notas
+
+\textbf{2019:} \textbf{37.} ANULADA
 
 \textbf{2017:} \textbf{35.} C
 
