--- a/3B-28.tex
+++ b/3B-28.tex
@@ -1056,6 +1056,17 @@ to the following restrictions (see also Annex 1):
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{38.} A raíz de los sucesivos acuerdos de Basilea se han ido estableciendo diferentes requerimientos de capital a las entidades financieras para garantizar que las mismas cuentan con recursos propios suficientes para hacer frente a sus deudos o pasivos. Señale la afirmación correcta:
+
+\begin{itemize}
+	\item[a] Recientemente el Comité de Basilea acordó una reducción en los requerimientos de capital para aquellas entidades que mantengan productos verdes (medioambientalmente sostenibles) en su cartera.
+	\item[b] Como medida macroprudencial, el acuerdo de Basilea III establece un colchón de capital adicional: el colchón de conservación del capital, cuya constitución queda sujeta a periodos en que el crecimiento del crédito esté acelerándose.
+	\item[c] El acuerdo Basilea III incluye unas revisiones de los métodos estándar para calcular: el riesgo de crédito, el riesgo de mercado, el riesgo de ajuste de valoración del crédito, y el riesgo operacional; a fin de mejorar la sensibilidad al riesgo y la comparabilidad.
+	\item[d] Actualmente los bancos europeos deben mantener un colchón de conservación del capital consistente en capital de la máxima calidad (capital de nivel 1) igual a $4,5\%$ de los activos ponderados por el riesgo.
+\end{itemize}
+
 \seccion{Test 2016}
 
 \textbf{18.} La crisis económica ha cambiado el diseño de las políticas macroeconómicas, dando pie al desarrollo de las políticas macroprudenciales, que están ocupando un lugar cada vez más protagonista. Cuál de los siguientes no es un instrumento característico de la política macroprudencial:
@@ -1101,6 +1112,8 @@ to the following restrictions (see also Annex 1):
 \notas
 
 Hablar sobre la exposición soberana de los sistemas bancarios. Para comenzar, por ejemplo: \url{https://www.bbva.com/es/sabes-por-que-se-incrementan-las-exposiciones-soberanas/}
+
+\textbf{2019:} \textbf{38.} C 
 
 \textbf{2016:} \textbf{18.} C \textbf{40.} B
 
