--- a/3B-31.tex
+++ b/3B-31.tex
@@ -1029,6 +1029,17 @@ Se denominan graduados aquellos países receptores de financiación concesional 
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{39.} Señale la afirmación correcta en relación a los bancos multilaterales-regionales:
+
+\begin{itemize}
+	\item[a] El CAF-Banco de Desarrollo de América Latina tiene a Estados Unidos como tenedor-accionista de la serie B.
+	\item[b] El Banco Europeo de Inversiones (BEI) no suministra productos y servicios financieros fuera de la Unión Europea.
+	\item[c] El Banco Asiático de Desarrollo (BAsD) tiene como principales accionistas a China y a Japón con más del $30\%$ del total del capital suscrito.
+	\item[d] El Fondo Asiático de Desarrollo (FAD) gestionado por el BAsD tiene como objetivo la financiación concesional de los países miembros menos desarrollados.
+\end{itemize}
+
 \seccion{Test 2018}
 
 \textbf{37.} La Corporación Financiera Internacional (CFI) del grupo del Banco Mundial:
@@ -1155,6 +1166,7 @@ Indique la respuesta correcta:
 
 \notas
 
+\textbf{2019:} \textbf{39.} D
 
 \textbf{2018:} \textbf{37.} D
 
