--- a/3B-32.tex
+++ b/3B-32.tex
@@ -1412,6 +1412,29 @@ El gráfico muestra como la introducción del impuesto específico permite induc
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{40.} En relación con la obra del economista William D. Nordhaus, considere las siguientes afirmaciones:
+
+\begin{itemize}
+	\item[i] Junto con Paul Romer, fue galardonado con el Premio Nobel de Economía en el año 2017.
+	\item[ii] Desarrolló los conocidos como \textit{Integrated Assessment Models} (IAMs) que son una extensión del modelo de Solow.
+	\item[iii] En su modelo principal, las teorías de externalidades y coste-beneficio juegan un papel central.
+	\item[iv] Su marco teórico permite evaluar, de forma cuantitativa, el impacto de la escasez de recursos naturales en el crecimiento a largo plazo.
+	\item[v] Su marco teórico considera que las emisiones contaminantes provocan el aumento de la temperatura a nivel global, lo que supone un obstáculo al crecimiento y al bienestar.
+	\item[vi] Sus modelos se basan en supuestos tales como agentes forward-looking, altruismo generacional y ahorro endógeno.
+\end{itemize}
+
+Señale la respuesta correcta:
+
+\begin{itemize}
+	\item[a] Todas las afirmaciones son verdaderas.
+	\item[b] Las afirmaciones i. y iv. son falsas.
+	\item[c] Las afirmaciones ii. y vi. son falsas.
+	\item[d] Sólo afirmaciones iii. y v. son verdaderas.
+\end{itemize}
+
+
 \seccion{Test 2018}
 
 \textbf{38.} De las siguientes afirmaciones, ¿cuál responde mejor al concepto de bien público global?
@@ -1443,6 +1466,8 @@ El gráfico muestra como la introducción del impuesto específico permite induc
 \end{itemize}
 
 \notas
+
+\textbf{2019:} \textbf{40.} ANULADA
 
 \textbf{2018:} \textbf{38.} C
 
