--- a/3B-35.tex
+++ b/3B-35.tex
@@ -680,6 +680,18 @@ Para que un FTA o una UA no impliquen extensión del trato favorable al resto de
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{41.} En relación al comercio de Propiedad Intelectual (PI), señale la afirmación \textbf{\underline{falsa}}:
+
+\begin{itemize}
+	\item[a] En el trascurso de las negociaciones durante la Ronda de Uruguay (1986-1994) de la Organización Mundial de Comercio (OMC), se firmó el acuerdo sobre los Aspectos de los Derechos de Propiedad Intelectual relacionados con el Comercio (ADPIC).
+	\item[b] En el acuerdo ADPIC no se contempla el principio de trato de nación más favorecida (NMF).
+	\item[c] Para las consultas y la solución de diferencias en el marco del acuerdo ADPIC se aplican las disposiciones previstas en el sistema de solución de diferencias de la OMC.
+	\item[d] El acuerdo ADPIC es parte integrante de la OMC.
+\end{itemize}
+
+
 \seccion{Test 2016}
 
 \textbf{41.} El Acuerdo General de la OMC sobre el Comercio de Servicios es:
@@ -704,6 +716,8 @@ Para que un FTA o una UA no impliquen extensión del trato favorable al resto de
 
 
 \notas
+
+\textbf{2019.} \textbf{41.} B
 
 \textbf{2016.} \textbf{41:} B
 
