--- a/3B-39.tex
+++ b/3B-39.tex
@@ -1151,6 +1151,17 @@ En el marco de la Política Pesquera Común, el principio de estabilidad relativ
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{42.} Sobre el funcionamiento de la Política Agrícola Común (PAC), ¿cuál es la afirmación correcta?
+
+\begin{itemize}
+	\item[a] El régimen de pago básico es uno de los regímenes obligatorios del sistema actual de ayudas desacopladas a la producción agraria.
+	\item[b] Las ayudas asociadas a la producción son aquellas que reciben agricultores y ganaderos con vistas a ir reduciendo sus producciones a fir de poder cumplir con los requisitos medioambientales de la PAC.
+	\item[c] El Fondo Europeo Agrícola de Garantía (FEAGA) es un fondo cofinanciado por el presupuesto general de la Unión Europea y por los presupuestos de los gobiernos de los países miembros de la Unión.
+	\item[d] Según la normativa de la PAC el término condicionalidad se refiere a la condición necesaria de ejercer la actividad agraria a tiempo completo para poder beneficiarse de las ayudas directas.
+\end{itemize}
+
 \seccion{Test 2017}
 \textbf{41.} En las reformas de la Política Agraria Común (PAC) del 2013.
 
@@ -1252,6 +1263,8 @@ Cuando en la UE se habla de la \comillas{línea directriz agraria o agrícola} s
 
 
 \notas
+
+\textbf{2019}. \textbf{42.} A
 
 \textbf{2017}. \textbf{41.} D
 
