--- a/3B-4.tex
+++ b/3B-4.tex
@@ -945,6 +945,17 @@ Las \textit{ofertas públicas de venta} consisten en el ofrecimiento al público
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{27.} De entre los diferentes métodos de valoración de empresas existentes, señale la opción correcta:
+
+\begin{itemize}
+	\item[a] Los métodos basados en el descuento de flujos de fondos (\textit{cash flows}) tratan de determinar el valor de la empresa a través de la estimación de los flujos de dinero -\textit{cash flows}- que generará en el futuro descontándolos a la tasa de descuento del activo de referencia libre de riesgo.
+	\item[b] De entre los métodos de valoración basados en la cuenta de resultados podríamos destacar, entre otros, el PER (\textit{Price-Earnings ratio}), el EV to EBITDA (\textit{Entreprise value to EBITDA}) o el múltiplo de las ventas, que permiten comparar empresas de diferentes sectores.
+	\item[c] El flujo de caja libre o \textit{free cash flow} se calcula a partir del Beneficio antes de intereses e impuestos, restándole el gasto en impuestos, así como los gastos por amortización o depreciación y sumándole los incrementos del fondo de maniobra y la inversión en capital fijo.
+	\item[d] La valoración de empresas a través del \textit{Price-Earnings ratio} (PER) no resultará útil en el caso de que los beneficios sean muy volátiles.
+\end{itemize}
+
 \seccion{Test 2014}
 \textbf{27.} El método conocido como Price Earning Ratio (PER) supone que:
 
@@ -995,6 +1006,8 @@ Las \textit{ofertas públicas de venta} consisten en el ofrecimiento al público
 \end{enumerate}
 
 \notas
+
+\textbf{2019}: \textbf{27.} D
 
 \textbf{2014}: \textbf{27.} B
 
