--- a/3B-41.tex
+++ b/3B-41.tex
@@ -1162,37 +1162,18 @@ Por otro lado, las condiciones laborales y los llamados derechos sociales son co
 				\4[] Germen de posible presupuesto de estabilización
 \end{esquemal}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 \preguntas
+
+\seccion{Test 2019}
+
+\textbf{43.} Señale la afirmación correcta en relación al crecimiento económico y a la convergencia/divergencia entre los países y entre las regiones de la Unión Europea (UE) según el Séptimo Informe de Cohesión, publicado por la Comisión Europea en 2017:
+
+\begin{itemize}
+	\item[a] A lo largo del período 2001-2016, el PIB per cápita creció con menor rapidez en términos reales en los Estados miembros menos desarrollados, y está previsto que esta tendencia se mantenga en 2017 y 2018.
+	\item[b] En la UE las disparidades regionales se acrecentaron considerablemente, en términos del PIB per cápita, entre el año 2000 y el año 2008.
+	\item[c] Durante el periodo 2001-2015, las regiones de renta muy alta, con un PIB per cápita equivalente al 150\% o más de la renta media de la UE, han crecido más rápido que las regiones de renta alta, con un PIB per cápita entre el 120\% y el 149\% de la media de la UE.
+	\item[d] Todas las afirmaciones son correctas.
+\end{itemize}
 
 \seccion{Test 2016}
 
@@ -1260,6 +1241,8 @@ Por otro lado, las condiciones laborales y los llamados derechos sociales son co
 \end{itemize}
 
 \notas
+
+\textbf{2019:} \textbf{43.} C
 
 \textbf{2016:} \textbf{47.} C
 
