--- a/3B-43.tex
+++ b/3B-43.tex
@@ -1216,6 +1216,17 @@ El comité adopta también otras configuraciones para materias específicas tale
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{44.} Señale la afirmación correcta respecto de la Política Comercial Común de la Unión Europea (UE): 
+
+\begin{itemize}
+	\item[a] El Parlamento Europeo tiene la potestad para introducir modificaciones en los procesos de negociación y celebración de acuerdos de libre comercio entre la UE y países terceros.
+	\item[b] En la OMC son miembros todos los países de la UE, pero no la UE en su conjunto.
+	\item[c] La Comisión Europea habrá de ser autorizada por el Consejo de la UE y por el Parlamento Europeo para poder iniciar las negociaciones tendentes a la celebración de acuerdos de libre comercio entre la UE y países terceros.
+	\item[d] La UE goza de competencia exclusiva en el ámbito de la Política Comercial Común, pero los acuerdos alcanzados pueden precisar la ratificación de los Estados miembros. 
+\end{itemize}
+
 \seccion{Test 2018}
 
 \textbf{43.} ¿Cuál de los cuatro países que forman la European Free Trade Association (EFTA) no forma parte del Espacio Económico Europeo (EEE)?
@@ -1265,6 +1276,8 @@ El comité adopta también otras configuraciones para materias específicas tale
 \end{itemize}
 
 \notas
+
+\textbf{2019:} \textbf{44.} D
 
 \textbf{2018:} \textbf{43.} D
 
