--- a/3B-6.tex
+++ b/3B-6.tex
@@ -1458,6 +1458,17 @@ También denominado \textit{índice de la ventaja comparativa revelada}, trata d
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{28.} Señale la respuesta correcta con respecto al Modelo de Melitz: ``El impacto del comercio en las reasignaciones dentro de la industria y la productividad de la industria agregada'' (2003):
+
+\begin{itemize}
+	\item[a] Uno de los supuestos fundamentales del modelo es asumir preferencias con elasticidad de sustitución constante.
+	\item[b] Una de las conclusiones principales extraídas del modelo es que la apertura comercial provoca que únicamente operen en el mercado doméstico las empresas más productivas, que son a su vez las empresas exportadoras.
+	\item[c] Una de las conclusiones principales extraídas del modelo es que las empresas más productivas fijarán precios más altos.
+	\item[d] Para determinar el número de empresas que finalmente operan es necesaria la condición de entrada limitada, según la cual únicamente las empresas con un determinado nivel de productividad serán consideradas como potenciales entrantes en la industria.
+\end{itemize}
+
 \seccion{Test 2017}
 \textbf{27.} La ``Paradoja de Leontief'' se basa en la observación de que:
 
@@ -1587,6 +1598,8 @@ También denominado \textit{índice de la ventaja comparativa revelada}, trata d
 \end{itemize}
 
 \notas
+
+\textbf{2019:} \textbf{28.} A
 
 \textbf{2017:} \textbf{27.} B \textbf{29.} A
 
