--- a/3B-7.tex
+++ b/3B-7.tex
@@ -1508,6 +1508,17 @@ La hipotésis de Prebisch-Singer postula que la relación entre el precio de las
 
 \preguntas
 
+\seccion{Test 2019}
+
+\textbf{29.} En base a un modelo de equilibrio parcial, suponga un mercado nacional en el que opera una única empresa (monopolio) que se abre al libre comercio. Analizando los efectos que ocasionarían sobre el mercado monopolista la introducción de un arancel o de una cuota se podría concluir que (señale la respuesta correcta):
+
+\begin{itemize}
+	\item[a] La apertura al libre comercio limitaría el poder del monopolista y, por lo tanto, el establecimiento de un arancel no prohibitivo restauraría el poder de mercado del monopolista.
+	\item[b] Los efectos derivados de la introducción de un arancel y de una cuota serían equivalentes.
+	\item[c] El establecimiento de una cuota permitiría al monopolista recuperar su poder de mercado frente a una demanda residual (demanda que quedaría tras la importación de bienes).
+	\item[d] Todas las anteriores son correctas.
+\end{itemize}
+
 \seccion{Test 2016}
 
 \textbf{31.} Señale la respuesta correcta de entre las siguientes, relacionadas con la política comercial:
@@ -1584,6 +1595,8 @@ La hipotésis de Prebisch-Singer postula que la relación entre el precio de las
 \end{itemize}
 
 \notas
+
+\textbf{2019:} \textbf{29.} C
 
 \textbf{2016:} \textbf{31.} A
 
